syntax = "proto3";
package plugin_manager;
//import "/home/ryan/go/pkg/mod/k8s.io/kubelet@v0.22.0/pkg/apis/deviceplugin/v1beta1/api.proto";


service Register {
  rpc RegisterHandler(DeviceRegisterRequest) returns (DeviceRegisterReply){}
}

message DeviceRegisterRequest {
  string deviceType = 1;
  string socketPath = 2;

}

message DeviceRegisterReply {
  bool registerResult = 1;
}


